# azure-imagegen

./: .gitignore  LICENSE  PRIVACY.md  README.md  TERMS.md  TODO.md  pyproject.toml
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
skills/azure-imagegen/: SKILL.md
skills/azure-imagegen/agents/: openai.yaml
skills/azure-imagegen/references/: azure-auth.md  cli.md  limitations.md  prompting.md  sample-prompts.md
skills/azure-imagegen/scripts/: image_gen.py
tests/: test_packaging_and_cli.py
